--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
